k8s/wnisb3-native/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: wnisb3-native
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: wnisb3-native
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: wnisb3-native
        app.kubernetes.io/component: app
    spec:
      containers:
      - name: app
        image: ghcr.io/alexandreroman/wnisb3-native:latest
        resources:
          requests:
            cpu: "2000m"
            memory: "256Mi"
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            port: http
            path: /actuator/health/liveness
        readinessProbe:
          httpGet:
            port: http
            path: /actuator/health/readiness
        volumeMounts:
        - name: config
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: app
