k8s/wnisb3-native/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: wnisb3-native
spec:
  selector:
    app.kubernetes.io/part-of: wnisb3-native
    app.kubernetes.io/component: app
  ports:
  - port: 8080
    targetPort: http
